// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Vieving 
    2
     
    expenses
     totaling: 
    99.99kr 
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with 1 expense 2`] = `
<div>
  <h1>
    Vieving 
    1
     
    expense
     totaling: 
    50.00kr 
  </h1>
</div>
`;
